ticketvalidation added and QR code generation as well